--- a/registrar-perro.html
+++ b/registrar-perro.html
@@ -73,7 +73,7 @@
             <br>
             <span class="required-field">*</span>
             <input type="text" name="color" class="input-style" placeholder="Color" required><br> <br>
-            Fecha de acimiento <br>
+            Fecha de nacimiento <br>
             <span class="required-field">*</span>
             <input type="date" name="nacimiento" class="input-style" placeholder="Fecha de nacimiento" required><br>
             <input type="text" name="observaciones" class="input-style" value="Sin Observaciones" placeholder="Observaciones (opcional)"><br><br>
@@ -83,7 +83,7 @@
                 <option value="macho">Macho</option>
             </select><br><br>
             Foto (opcional) <br><br>
-            <input type="file" name="foto"><br><br>
+            <input type="file" name="foto" accept="image/*"><br><br>
             Disonibilidad para Cruza <br>
             <select name="disponibilidad_cruza" class="input-style" required>
                 <option value="0">No</option>
