--- a/formServicioCruza.html
+++ b/formServicioCruza.html
@@ -22,6 +22,10 @@
 							<option class="option-select-menu" value="" selected disabled>Selecciona una opción</option>
 							<option class="option-select-menu" value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
 							<option class="option-select-menu" value="cargarAdopcion.html">Registrar Perro para adopcion</option>
+							<option class="option-select-menu" value="formPerroBuscado.html">Registrar Perro Buscado</option>
+							<option class="option-select-menu" value="mostrarPerrosBuscados.html">Mostrar Perros Buscados</option>
+							<option class="option-select-menu" value="formPerroPerdidos.html">Registrar Perro Perdidos</option>
+							<option class="option-select-menu" value="mostrarPerrosPerdidos.html">Mostrar Perros Perdidos</option>
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
