--- a/mostrarPerrosPerdidos.html
+++ b/mostrarPerrosPerdidos.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="initial-scale=1">
-		<title>¡Oh My Dog! - Registro cuidadores</title>
+		<title>¡Oh My Dog! - Perros Perdidos</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 	</head>
 
-	<body>
+	<body class="adopcion">
 		<header>
-			<img src="img/Logo1-removebg-preview.png" id="imghome">
+			<a class="option-menu" href="index.html"><img src="img/Logo1-removebg-preview.png" id="imghome"></a>
 			<div id="menu">
 				<ul id="ul-style-menu">
 					<div class="border"></div>
 					<li><a class="link-style-menu option-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
-                    <li>
+					<li>
 						<a class="link-style-menu">SERVICIOS</a>
 						<select onchange="if (this.value) window.location.href = this.value;">
 							<option class="option-select-menu" value="" selected disabled>Selecciona una opción</option>
@@ -24,7 +24,7 @@
 							<option class="option-select-menu" value="form-RegistroCP.html">Registrar Cuidador/Paseador</option>
 							<option class="option-select-menu" value="cargarAdopcion.html">Registrar Perro para adopcion</option>
 							<option class="option-select-menu" value="formCampaniaDonacion.html">Registrar campaña de donacion</option>
-							<option class="option-select-menu" value="formPerroBuscado.html">Registrar Perro Buscado</option>
+                            <option class="option-select-menu" value="formPerroBuscado.html">Registrar Perro Buscado</option>
 							<option class="option-select-menu" value="mostrarPerrosBuscados.html">Mostrar Perros Buscados</option>
 							<option class="option-select-menu" value="formPerroPerdidos.html">Registrar Perro Perdidos</option>
 							<option class="option-select-menu" value="mostrarPerrosPerdidos.html">Mostrar Perros Perdidos</option>
@@ -39,7 +39,7 @@
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ver-usuarios" class="option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>
+					<li><a class="link-style-menu ver-usuarios option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-nos option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
@@ -61,27 +61,13 @@
 				</ul>
 			</div>
 		</header>
-
-		<div class="body-sign-in-and-up">
-			<form id="formulario" action="index.html" method="post">
-				<label class="form-label">Formulario de Registro para Cuidadores y Paseadores</label><br>
-				<input type="text" name="name" class="input-style" placeholder="Nombre" required><br>
-				<input type="text" name="lastName" class="input-style" placeholder="Apellido" required><br>
-				<input type="email" name="email" id="log-in-email" class="input-style" placeholder="Email"><br>
-				<select name="service" class="input-style" required>
-					<option value="" selected disabled>Selecciona un servicio</option>
-					<option value="cuidador">Cuidador</option>
-					<option value="paseador">Paseador</option>
-					<!-- Agrega más opciones si es necesario -->
-				  </select><br>
-				<input type="text" name="place" class="input-style" placeholder="Lugar" required><br>
-				<p class="mensaje-error"></p>
-				<input type="submit" id="submitLog" value="Registrar" class="continuar-y-registrarme-btn">
-				
-			</form>
+        
+        <div class="body-contenedor" id="contenedorDatos">
+            <h1>Perros Perdidos</h1><br>
+            <hr>
         </div>
+        <script src="js/mostrarPerrosPerdidos.js" type="module"></script>
+		<script src="js/cambiarEstadoBotones.js"></script>
+	    <script src="js/cerrarSesion.js"></script>
 	</body>
-	<script src="js/v-cuidador-paseador.js" type="module"></script>
-	<script src="js/cambiarEstadoBotones.js"></script>
-	<script src="js/cerrarSesion.js"></script>
 </html>
