--- a/formServicioCruza.html
+++ b/formServicioCruza.html
@@ -72,7 +72,7 @@
 				Nacimiento <br>
                 <input type="text" name="fecha" class="input-style" id="fecha_perro" style="color: #808080;" readonly required><br><br>
 				<script src="js/datosPerroCruza.js" type="module"></script>
-				<p>Incentivo a la adopcion <a href="">click aqui</a></p>
+				<p>Incentivo a la adopcion <a href="formAdopcion.html">click aqui</a></p>
 				<p class="mensaje-error"></p>
 				<input type="submit" id="submitLog" value="Registrar" class="continuar-y-registrarme-btn">
 			</form>
