Se agrego en el mostrar turnos la vista de los turnos de hoy automaticamente, se agrego el los horarios de guardia a los html y se corrigieron algunos errores

--- a/formPerroBuscado.html
+++ b/formPerroBuscado.html
@@ -29,6 +29,7 @@
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
+							<option class="option-select-menu" value="mostrarHorarioGuardia.html">Veterinarias de guardia</option>
 						</select>
 					</li>
 					<div class="border"></div>
