--- a/mostrarHorarioGuardia.html
+++ b/mostrarHorarioGuardia.html
@@ -36,6 +36,7 @@
 							<option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
 							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 							<option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
+							<option class="option-select-menu" value="mostrarHorarioGuardia.html">Veterinarias de guardia</option>
 						</select>
 					</li>
 					<div class="border"></div>
@@ -49,7 +50,7 @@
 			</div>
 		</header>
 
-		<div class="body-sign-in-and-up">
+		<div class="body-contenedor">
 			<h1>Veterinarias de guardias</h1>
             <iframe src="horarioGuardia/guradia.pdf" width="630" height="680"></iframe>
         </div>
