--- a/registrar-perro.html
+++ b/registrar-perro.html
@@ -35,6 +35,7 @@
                         <option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
                         <option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
                         <option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
+                        <option class="option-select-menu" value="mostrarHorarioGuardia.html">Veterinarias de guardia</option>
                     </select>
                 </li>
                 <div class="border"></div>
