--- a/formServicioCruza.html
+++ b/formServicioCruza.html
@@ -29,6 +29,7 @@
 							<option class="option-select-menu" value="mostrarPaseador.html">Mostrar Paseadores</option>
 							<option class="option-select-menu" value="mostrarCuidador.html">Mostrar Cuidadores</option>
 							<option class="option-select-menu" value="verAdopciones.html">Mostrar Adopciones</option>
+							<option class="option-select-menu" value="mostrarHorarioGuardia.html">Veterinarias de guardia</option>
 						</select>
 					</li>
 					<div class="border"></div>
@@ -72,7 +73,7 @@
 				Nacimiento <br>
                 <input type="text" name="fecha" class="input-style" id="fecha_perro" style="color: #808080;" readonly required><br><br>
 				<script src="js/datosPerroCruza.js" type="module"></script>
-				<p>Incentivo a la adopcion <a href="formAdopcion.html">click aqui</a></p>
+				<p>Antes de tomar esa decisión, queremos recordarte la importancia de la adopción. Existen muchos animales abandonados que necesitan ayuda en perreras y refugios. Te invitamos a visitar nuestra sección de adopción y brindarles una oportunidad de tener un hogar amoroso. <a href="verAdopciones.html">click aqui</a></p>
 				<p class="mensaje-error"></p>
 				<input type="submit" id="submitLog" value="Registrar" class="continuar-y-registrarme-btn">
 			</form>
