--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -35,6 +35,7 @@
 							<option class="option-select-menu listar-turnos" value="listar-mis-turnos.html">Listar mis turnos</option>
 							<option class="option-select-menu listar-turnos" value="listar-turnos.html">Listar turnos pendientes</option>
 							<option class="option-select-menu" value="turnosDelDia.html">Turnos del dia</option>
+							<option class="option-select-menu" value="mostrarHorarioGuardia.html">Veterinarias de guardia</option>
 						</select>
 					</li>
 					<div class="border"></div>
@@ -71,8 +72,8 @@
 					<option value="vacuna-enfermedad">Vacunación enfermedad</option>
 					<option value="vacuna-rabia">Vacunación rabia</option>
                     <option value="castracion">Castraci&oacute;n</option>                    
-					<!--<option value="desparacitacion">Desparasitaci&oacute;n</option>
-					<option value="consulta-general">Consulta general</option>-->
+					<option value="desparacitacion">Desparasitaci&oacute;n</option>
+					<option value="consulta-general">Consulta general</option>
                 </select> <br><br>
                 Horario:
                 <input type="radio" name="horario" value="Mañana" required>Mañana 
