Modifique para ver el historial clinico y la libreta de vacunacion

--- a/formRegistarUrgencia.html
+++ b/formRegistarUrgencia.html
@@ -65,7 +65,7 @@
 				</select><br><br>
 				<script src="js/listarDescuentos.js" type="module"></script>
 				<p class="mensaje-error"></p>
-				<input type="submit" id="submitLog" value="Registrar Vacunacion" class="continuar-y-registrarme-btn">
+				<input type="submit" id="submitLog" value="Registrar Consulta" class="continuar-y-registrarme-btn">
 			</form>
         </div>
 	</body>
