--- a/historiaClinica.html
+++ b/historiaClinica.html
@@ -66,9 +66,17 @@
         <div class="body-contenedor" id="contenedorDatos">
             <h1>Historia Clinica</h1><br>
                 <hr>
-                <div class="vacunaciones"></div>
+                <div class="vacunacion-e"><h2>Vacunacion Enfermedades</h2></div>
+				<hr>
+				<div class="vacunacion-r"><h2>Vacunacion Rabia</h2></div>
                 <hr>
-                <div class="desparasitaciones"></div>
+                <div class="desparasitacion"><h2>Desparacitacion</h2></div>
+                <hr>
+				<div class="castracion"><h2>Castracion</h2></div>
+                <hr>
+				<div class="consulta-general"><h2>Consulta General</h2></div>
+                <hr>
+				<div class="urgencia"><h2>Urgencia</h2></div>
                 <hr>
         </div>
         <script src="js/verHistoriaClinica.js" type="module"></script>
