--- a/libretaVacunacion.html
+++ b/libretaVacunacion.html
@@ -66,9 +66,9 @@
         <div class="body-contenedor" id="contenedorDatos">
             <h1>Libreta De Vacunacion</h1><br>
                 <hr>
-                <div class="vacunaciones"></div>
+                <div class="vacunaciones"><h1>Vacunaciones</h1></div>
                 <hr>
-                <div class="desparasitaciones"></div>
+                <div class="desparasitacion"><h1>Desparasitaciones</h1></div>
                 <hr>
         </div>
         <script src="js/verLibretaVacunacion.js" type="module"></script>
