--- a/mostrarHorarioGuardia.html
+++ b/mostrarHorarioGuardia.html
@@ -40,7 +40,7 @@
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ocultar-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li><a class="link-style-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-con" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
@@ -55,5 +55,7 @@
             <iframe src="horarioGuardia/guradia.pdf" width="630" height="680"></iframe>
         </div>
 	</body>
+	<script src="js/actualizarUrls.js" type="module"></script>
+	<script src="js/cambiarEstadoBotones.js"></script>	
 	<script src="js/cerrarSesion.js"></script>
 </html>
