--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -41,7 +41,7 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu ver-usuarios option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu ocultar-nos option-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li><a class="link-style-menu option-nos" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-con option-con" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
