Se muestra el estado de los descuentos hechos por el usuario y arregle un error que provoque en uno de los ultimos commit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div class="border"></div>
 					<li><a class="link-style-menu ver-usuarios" class="option-menu" href="mostrarUsuarios.html">LISTAR USUSARIOS</a></li>
 					<div class="border"></div>
-					<li><a class="link-style-menu" class="option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li><a class="link-style-menu ocultar-nos" class="option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-con" class="option-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
@@ -67,7 +67,8 @@
 		</header>
 
 	</body>
-	<script src="js/actualizarUrls.js" type="module"></script>
 	<script src="js/cambiarEstadoBotones.js"></script>	
+	<script src="js/actualizarUrls.js" type="module"></script>
+	
 	<script src="js/cerrarSesion.js"></script>
 </html>
