--- a/formPerroPerdidos.html
+++ b/formPerroPerdidos.html
@@ -33,7 +33,7 @@
 						</select>
 					</li>
 					<div class="border"></div>
-					<li><a class="link-style-menu option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
+					<li><a class="link-style-menu ocultar-nos option-menu" href="about-us.html">SOBRE NOSOTROS</a></li>
 					<div class="border"></div>
 					<li><a class="link-style-menu ocultar-con option-menu" href="contact-us.html">CONTACTO</a></li>
 					<div class="border"></div>
